resources/css/main.css
/* Style our background */

html, body {
    background: black;
    margin: 0;
    padding: 0;
    border: 0;
}


/* Style all our buttons */

button {
    font-family: 'Roboto', sans-serif;
    border: none;
    color: white;
    padding: 10px 0 10px 0;
    text-align: center;
    display: inline-block;
    font-size: 16px;
    -webkit-webkit-transition-duration: 0.4s;
    -moz-webkit-transition-duration: 0.4s;
    -ms-webkit-transition-duration: 0.4s;
    -o-webkit-transition-duration: 0.4s;
    transition-duration: 0.4s;
}


/*Set the default size of our google map */

html, body, .google-map {
    width: 100%;
    height: 94.95%;
}


/* Styling for all the info boxes */

.info {
    width: 100%;
    height: 100px;
    float: left;
    color: white;
}

.infoE {
    background: #43A047;
}

.infoM {
    background: #3F51B5;
}

.infoH {
    background: #E53935;
}

.infoB {
    background: #212121;
}

.infoX {
    background: #FF5722;
}


/* Default styling for our header */

.header {
    width: 100%;
    background-color: black;
    overflow: auto;
    border: 0;
}

.header img {
    height: 140px;
    margin-right: 8%;
}

.header .trailBtns {
    padding: 0;
    margin: 50px;
}

.header .trailBtns button {
    width: 140px;
    margin: 0 5px 0 5px;
}


/* Colouring our buttons and adding hover colours */

.trailE {
    background: #43A047;
}

.trailE:hover {
    background: #66BB6A;
}

.trailM {
    background: #3F51B5;
}

.trailM:hover {
    background: #7986CB;
}

.trailH {
    background: #E53935;
}

.trailH:hover {
    background: #EF5350;
}

.trailB {
    background: #212121;
}

.trailB:hover {
    background: #616161;
}

.trailX {
    background: #FF5722;
}

.trailX:hover {
    background: #FF7043;
}


/* Badly implemented scaling for the Google Map */

@media only screen and (max-width: 1150px) {
    html, body, .google-map {
        width: 100%;
        height: 93.4%;
    }
}


/* Scaling for the Mobile view */

@media only screen and (max-width: 480px) {
    html, body, .google-map {
        width: 100%;
        height: 89.4%;
    }
    .trailBtns {
        width: 100%;
    }
    .header {
        overflow: hidden;
        display: inline-block;
        width: 100%;
        margin: 0;
        background-color: black;
    }
    .header img {
        display: inline-block;
        margin-left: 15%;
        width: 70%;
    }
    .header .trailBtns {
        width: 100%;
        padding: 0;
        margin: 0;
    }
    .header .trailBtns button {
        float: left;
        margin: 0;
        width: 20%;
    }
}

